--- a/Projects.html
+++ b/Projects.html
@@ -14,8 +14,8 @@
     <a href="index.html"><img src="logo.png" alt="" width="45px" class="logo"></a>
     <nav >
         <ul>
-            <li><a href="Projects.html">Projects</a></li>
-            <li><a href="About.html">About</a></li>
+            <li><a href="Projects.html" style="color: #cacaca;">Projects</a></li>
+            <li><a href="About.html" style="color: #cacaca;">About</a></li>
             <li>Contact</li>
         </ul>
     </nav>
@@ -98,4 +98,5 @@
     </div> 
      
 </body>
+
 </html>
