--- a/Portfolio new/index2.html
+++ b/Portfolio new/index2.html
@@ -14,7 +14,7 @@
     <a href="index.html"><img src="logo.png" alt="" width="45px" class="logo"></a>
     <nav >
         <ul >
-            <li><a href="Projects.html" style="color: #cacaca;">Projects</a></li>
+            <li><a href="index2.html" style="color: #cacaca;">Projects</a></li>
             <li><a href="About.html" style="color: #cacaca;">About</a></li>
             <li style="color: #cacaca;">Contact</li>
         </ul>
