--- a/Portfolio new/index.html
+++ b/Portfolio new/index.html
@@ -15,7 +15,7 @@
     <img src="logo.png" alt="" width="45px" class="logo">
     <nav>
         <ul>
-            <li><a href="Projects.html">Projects</a></li>
+            <li><a href="Portfolio new\Projects.html">Projects</a></li>
             <li><a href="About.html">About</a></li>
             <li>Contact</li>
         </ul>
