added more pictures

--- a/Projects.html
+++ b/Projects.html
@@ -27,34 +27,34 @@
         <div class="transparent-card">
             <img src="Annotation 2025-01-27 111410.png" alt="" class="project-pic">
             <div class="project-info">
-                <div class="project-title"> Fashion store landing page <img src="north_east_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="" class="svg">  </div>
+                <div class="project-title"> Portfolio <img src="north_east_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="" class="svg">  </div>
                 <div class="description"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias ratione quae ipsa fuga, ab dolorem!</div>
 
             </div>
         </div>
         
         <div class="transparent-card">
-            <img src="Annotation 2025-01-27 111410.png" alt="" class="project-pic">
+            <img src="Opera Snapshot_2025-10-23_135551_index.html.png" alt="" class="project-pic">
             <div class="project-info">
-                <div class="project-title"><a href="https://haematite979.github.io/curly-octo-meme"> Portfolio <img src="north_east_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="" class="svg"> </a> </div>
+                <div class="project-title">Gaming website<a href="https://haematite979.github.io/curly-octo-meme"><img src="north_east_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="" class="svg"> </a> </div>
                 <div class="description"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias ratione quae ipsa fuga, ab dolorem!</div>
 
             </div>
         </div>
 
         <div class="transparent-card" >
-            <img src="" alt="" class="project-pic">
+            <img src="Headphone website.png" alt="" class="project-pic">
             <div class="project-info">
-                <div class="project-title"> Fashion store landing page <img src="north_east_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="" class="svg"> </div>
+                <div class="project-title"> Headphone website <img src="north_east_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="" class="svg"> </div>
                 <div class="description"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias ratione quae ipsa fuga, ab dolorem!</div>
 
             </div>
         </div>
         
         <div class="transparent-card">
-            <img src="" alt="" class="project-pic">
+            <img src="Opera Snapshot_2025-08-09_184312_index.html.png" alt="" class="project-pic">
             <div class="project-info">
-                <div class="project-title"> Fashion store landing page <img src="north_east_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="" class="svg"> </div>
+                <div class="project-title"> Croissant landing page <img src="north_east_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="" class="svg"> </div>
                 <div class="description"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias ratione quae ipsa fuga, ab dolorem!</div>
 
             </div>
